--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   # Core
   intl: ^0.20.2
   path: ^1.9.1
+  uuid: ^4.5.1
   get_it: ^8.0.3
   camera: ^0.11.1
   encrypt: ^5.0.3
@@ -31,9 +32,10 @@ dependencies:
 
   # Services
   image: ^4.5.4
+  local_auth: ^2.3.0
   file_picker: ^10.1.9
   image_picker: ^1.1.2
-  biometric_storage: ^5.0.1
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
