--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   file_picker: ^10.1.9
   image_picker: ^1.1.2
   flutter_secure_storage: ^9.2.4
+  mockito: ^5.4.6
+  bloc_test: ^10.0.0
 
 dev_dependencies:
   flutter_test:
