--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,13 @@ dependencies:
 
   # Services
   image: ^4.5.4
+  mockito: ^5.4.6
+  bloc_test: ^10.0.0
+  fake_async: ^1.3.3
   local_auth: ^2.3.0
   file_picker: ^10.1.9
   image_picker: ^1.1.2
   flutter_secure_storage: ^9.2.4
-  mockito: ^5.4.6
-  bloc_test: ^10.0.0
 
 dev_dependencies:
   flutter_test:
