Enhance testing framework and documentation for SecureCapture application
- Updated BRIEF.md to include comprehensive sections on BLoC, integration, and widget testing methodologies.
- Added integration test setup instructions in README.md for running tests on Android devices.
- Introduced a shell script for automated integration testing, streamlining the testing process.
- Created new integration tests for the dashboard screen and utility functions to initialize the testing environment.
- Updated pubspec.yaml and pubspec.lock to include necessary dependencies for integration testing.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
   freezed: ^2.5.8
