--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Get dependencies
       run: flutter pub get
     
+    - name: Generate code
+      run: flutter packages pub run build_runner build
+    
     - name: Analyze code
       run: flutter analyze
     
